# ProtACO

./: .gitignore  CITATION.cff  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: README.md  inference_truth.csv  sequences.fasta  train_metadata.csv
protaco/: __init__.py  dataset.py  model.py
scripts/: __init__.py  generate_embeddings.py  inference.py  train.py
tests/: conftest.py  test_dataset.py  test_model.py
