[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protaco"
version = "0.1.0"
description = "PyTorch Lightning implementation of ProtACO for protein score prediction from ProtT5 embeddings."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Changyong Yu" },
    { name = "Menghan Ji" },
    { name = "Jing He" },
    { name = "Haitao Ma" },
    { name = "Xian Liu" },
]
keywords = [
    "protein",
    "protein-language-model",
    "ProtT5",
    "PyTorch",
    "regression",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython",
    "lmdb",
    "matplotlib",
    "numpy",
    "pandas",
    "pytorch-lightning",
    "sentencepiece",
    "torch",
    "torchmetrics",
    "tqdm",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/Diliraba777/ProtACO"
Repository = "https://github.com/Diliraba777/ProtACO"
Issues = "https://github.com/Diliraba777/ProtACO/issues"

[tool.setuptools]
packages = ["protaco", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
